messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-blue
  labels:
    app: django-app
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
      version: blue
  template:
    metadata:
      labels:
        app: django-app
        version: blue
    spec:
      containers:
        - name: django-app
          image: temz/alx_msg_app:latest
          ports:
            - containerPort: 8000
