messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-green
  labels:
    app: django-app
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
      version: green
  template:
    metadata:
      labels:
        app: django-app
        version: green
    spec:
      containers:
        - name: django-app
          image: temz/alx_msg_app:latest
          ports:
            - containerPort: 8000
