messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql-db
          image: mysql:8.0.40
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc  # Ensure you have a PVC for persistent storage
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None


apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-yellow
  labels:
    app: django-app
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
      version: default
  template:
    metadata:
      labels:
        app: django-app
        version: default
    spec:
      containers:
        - name: django-app
          image: temz/alx_msg_app:latest
          ports:
            - containerPort: 8000
