messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  namespace: default
spec:
  rules:
    - host: django-app.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: django-app-service
                port:
                  number: 8000
